--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml.
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
-url: "https://ChitandaE.github.io/blog" # the base hostname & protocol for your site
+url: "https://ChitandaE.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
