--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Blog
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  吾王剑之所指 吾等心之所向
+  上神与我同在
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
