--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Blog
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   上神与我同在
+  blog已迁移至https://chtandae.github.io/blogs/
+  欢迎访问
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
