--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Blog
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"          
-  blog已迁移至https://chitandae.github.io/blogs/
+  blog已迁移至https://chitandae.github.io/blog/
   欢迎访问
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
@@ -11,6 +11,3 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-
-# favicon
-favicon: /book.svg
