--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"          
   blog已迁移至https://chitandae.github.io/blog/
   欢迎访问
-baseurl: "/blog" # the subpath of your site, e.g. /blog/
+baseurl: "/blogs" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
